hard-gists/b27cdbff68870418bdb8cefa86a2d558/run.log
=== Docker Run Log for b27cdbff68870418bdb8cefa86a2d558 ===
Started at: Mi 29. Okt 19:25:14 CET 2025

[2025-10-29 19:25:14] START: Running container for b27cdbff68870418bdb8cefa86a2d558
[2025-10-29 19:25:14] SUCCESS: Container 046cec2dad77211bed95f9b7e958f19e8974e583ecea8e9bd14bb1c08fb5c453 started for b27cdbff68870418bdb8cefa86a2d558
=== Container logs for b27cdbff68870418bdb8cefa86a2d558 ===
  File "/snippet.py", line 26
    print '==>>> total trainning batch number: {}'.format(len(train_loader))
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for b27cdbff68870418bdb8cefa86a2d558 ===
[2025-10-29 19:25:16] INFO: Container 046cec2dad77211bed95f9b7e958f19e8974e583ecea8e9bd14bb1c08fb5c453 has stopped
